--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "*.{js,jsx}": ["eslint --cache --max-warnings=0", "prettier --check"]
+  "src/**/*.{js,jsx}": ["eslint --cache --max-warnings=0", "prettier --check"]
 }
